[package]
name = "dmx-rdm"
version = "0.0.11-alpha"
edition = "2021"
readme = "README.md"
description = "Rust library for communicating DMX512 (ANSI E1.11) and DMX-RDM (ANSI E1.20) over a RS485 bus by using interchangeable drivers."
keywords = ["no-std", "no-alloc", "embedded", "defmt", "dmx512"]
repository = "https://github.com/TKFRvisionOfficial/dmx-rdm-rs"
license = "MIT OR Apache-2.0"
authors = ["TKFRvision <tkfrvision@gmx.de>"]
categories = ["embedded", "no-std", "no-std::no-alloc", "hardware-support"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
heapless = "0.8"
modular-bitfield = "0.11"
binary-layout = { version = "~4.0.2", default-features = false }
defmt = { version = "0.3", optional = true }

[features]
default = ["std"]

std = ["binary-layout/std"]
defmt = ["dep:defmt"]
